added git repository, hosted @gitlab

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "browserify build/bundle.js --standalone util --debug --outfile build/utilities.js",
     "#postinstall": "mkdirp vendor && cp node_modules/systemjs/dist/system.j* vendor/"
   },
+  "repository" : {"type": "git", "url": "git@gitlab.com:jon.ronnenberg/svgmap.git"},
   "author": "dotnetCarpenter <jon.ronnenberg@gmail.com>",
   "license": "ISC",
   "dependencies": {
